other/traefik/mongo.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
  #namespace: traefik
spec:
  selector:
    app: mongodb
    role: master
    tier: backend
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongodb
  #namespace: traefik
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
        role: master
        tier: backend
    spec:
      containers:
      - name: mongodb
        image: bitnami/mongodb:latest
        ports:
        - containerPort: 27017
